# QMDS

./: .env.template  .gitignore  README.md  bestproxy_tokens.txt  crawlbase_keys.txt  google_result.html  google_test.html  proxies.txt  pyproject.toml  requirements.txt  scraperapi_keys.txt  searchapi_keys.txt  split_categories.py  start.py  test.html
BB_Data_Tool - 副本 - 副本/: error_log.txt  requirements.txt  站群系统上传日志-惠升版_log.txt  脚本管理器.py
YSQD/: Data.lnk  app.py  app.py.lnk  auto_category.py  auto_classify_sample_report.json  auto_classify_sample_report_v2.json  auto_classify_sample_report_v3.json  auto_classify_sample_report_v4.json  auto_classify_sample_report_v5.json  batch_deal_error.txt  batchdeal.py  bestproxy_tokens.txt  camergait_wc_orders.html  check_all_columns.py  check_build_status.py  check_db.py  config_window.py  constants.py  currency_config.json  data_scraper.py  datastore.py  db_setup.py  debug_db.py  debug_yoast_camergait_com.html  domain_batch_checker.py  domain_bulk_checker.py  domain_bulk_checker_sample.txt  domain_bulk_checker_sample_checked.xlsx  domain_reporter.py  domain_reporter_client.py  erp_builder.py  extra_data_uploader.py  fix_encoding.py  forbidden_filter.py  health_checker.py  install_mongodb_admin.bat  install_mongodb_admin.ps1  main_category_page.html  main_category_uploader.py  main_category_uploader_v2.py  (+60 more)
YSQD/mango/: URL导出.py  (+35 more)
scripts/: fix_indexes.py  init_db.py  migrate_categories.py  run_scraper.py  sync_stations.py
tests/: test_seo_checker.py
uploads/: 体育用品url.txt  体育用品url.xlsx  家居与园艺url.txt  家居与园艺url.xlsx  网站信息.xlsx
(+221 files in other folders)
